--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "file-io-upload",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utility to upload files to file.io, use with npx",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "file-io-upload": "node index"
   },
   "repository": {
     "type": "git",
